# MiniDvdRipper

./: .gitignore  LICENSE  README.md  mdvdrip  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/minidvdripper/: __init__.py  carve.py  cli.py  config.py  contact.py  describe.py  disc.py  finalize.py  icons.py  imaging.py  isofs.py  notify.py  photos.py  pipeline.py  power.py  recover.py  remux.py  report.py  stills.py  titles.py  tools.py  tui.py
tests/: offline_test.py
